GNOME Bugzilla – Bug 647170
mobile broadband page does not seem to work at all
Last modified: 2012-07-02 11:46:56 UTC
even after the fix for bug 646837, the mobile broadband page does not seem to work. When you click on it you see: (gnome-control-center:20520): network-cc-panel-WARNING **: Error getting registration info: GDBus.Error:org.freedesktop.DBus.Error.UnknownMethod: Method "GetRegistrationInfo" with signature "" on interface "org.freedesktop.ModemManager.Modem.Gsm.Network" doesn't exist (gnome-control-center:20520): network-cc-panel-CRITICAL **: no widgets heading_mobilebb_dns, label_mobilebb_dns found (gnome-control-center:20520): network-cc-panel-CRITICAL **: no widgets heading_mobilebb_route, label_mobilebb_route found (gnome-control-center:20520): network-cc-panel-CRITICAL **: no widgets heading_mobilebb_ipv6, label_mobilebb_ipv6 found (The first error is only printed for CDMA devices.) And then you get a page which is completely blank except for an "Options" button that doesn't do anything.
I have a Telcel 3G Broadband USB Doohickey, model: ZTE MF636. It's GSM, not CDMA, but I get the exact same log. I followed some old instructions and setting it up on Fedora 15. I'd *love* to help debug and fix this issue and am willing to test obscure packages to do so.
I have the same issue with a 3G Option Globetrotter 7.2 Max card. I don't actually think that the card type has any relevance. As a workaround to configure a 3G network one has to first connect to a WLAN (or LAN) network, go to Network Settings and click the Options button _twice_. First click brings up the WLAN (or LAN) config dialog and a second click shows the tabbed network connections dialog where one can go to the mobile broadband tab and set up 3G details. Is the completely unintuitive double-clicking of the options button also a bug? Or some sort of a fallback option?
(In reply to comment #2) There is another workaround for this bug. It allows you to edit a mobile broadband connection even if you do not have a WLAN connection available. Just open a terminal and run "nm-connection-editor".
commit 6689012eb8881c548fbca52c2ac09c7511e7deae Author: Richard Hughes <richard@hughsie.com> Date: Thu Jun 28 12:17:18 2012 +0100 network: Show multiple connections in the mobile broadband panel Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=647170