network: Show multiple connections in the mobile broadband panel

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=647170